# minceraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  collision.c  collision.h  cubegame.h  glutil.h  linmath.h  main.c  util.h  world.c  world.h
lib/linmath/: CMakeLists.txt
lib/noise1234/: CMakeLists.txt  noise1234.c
lib/stb/: CMakeLists.txt  Makefile  stb.c
shaders/: chunk.fsh  chunk.vsh
src/: chunk_renderer.c  chunk_renderer.h  cubegame.h  global.h  glutil.c  main.c  util.c  util.h  world.c  world.h  worldgen.c  worldgen.h
